Bug 26480 - UBSAN error: gas/config/tc-nios2.c:1634:17:
Summary: UBSAN error: gas/config/tc-nios2.c:1634:17:
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.36
Assignee: Alan Modra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-20 12:35 UTC by Martin Liska
Modified: 2020-08-31 11:06 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed: 2020-08-31 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liska 2020-08-20 12:35:53 UTC
The following fails when I build binutils with:
configure --build=x86_64-linux --disable-nls --disable-gdb --disable-gdbserver --disable-sim --disable-readline --disable-libdecnumber --enable-obsolete --target=nios2-linux CFLAGS="-g -O2 -fsanitize=address,undefined -Wno-error" CXXLAGS="-g -O2 -fsanitize=address,undefined -Wno-error" LDFLAGS="-ldl"
Target: nios2-linux
PASS: NIOS2 CDX or.n
Executing on host: sh -c {../as-new  -march=r2  -o tmpdir/cdx_pop.o /home/mliska/Programming/binutils/gas/testsuite/gas/nios2/cdx_pop.s 2>&1}  /dev/null dump.tmp (timeout = 300)
/home/mliska/Programming/binutils/gas/config/tc-nios2.c:1634:17: runtime error: left shift of 1 by 31 places cannot be represented in type 'int'
Comment 1 Sourceware Commits 2020-08-31 11:00:14 UTC
The master branch has been updated by Alan Modra <amodra@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=51bf29b1f75b811f8b398543e164798244ec9cc3

commit 51bf29b1f75b811f8b398543e164798244ec9cc3
Author: Alan Modra <amodra@gmail.com>
Date:   Mon Aug 31 15:55:20 2020 +0930

    PR26480 UBSAN: tc-nios2.c:1634 left shift cannot be represented
    
            PR 26480
            * config/tc-nios2.c (nios2_parse_reglist): Shift 1UL left.
Comment 2 Alan Modra 2020-08-31 11:06:04 UTC
Fixed