PR26480 UBSAN: tc-nios2.c:1634 left shift cannot be represented

PR 26480
	* config/tc-nios2.c (nios2_parse_reglist): Shift 1UL left.